add dockerfile and docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.kafka.consumer.group-id=
-spring.kafka.bootstrap-servers=
+spring.kafka.bootstrap-servers=http://localhost:9092
+spring.kafka.consumer.group-id=TestGroup
