--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>${javafaker.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <resources>
